--- a/.gitignore
+++ b/.gitignore
@@ -48,9 +48,8 @@ ExportedObj/
 *.opendb
 *.VC.db
 
-# Unity and Blender files
+# Unity3D generated meta files
 *.meta
-*.cache
 
 # Unity3D generated file on crash reports
 sysinfo.txt
