--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Current commit changes.txt
 Current commit changes.txt
+Rulebook.docx
+~$lebook.docx
